...
    <string name="version_label">Versio %1$s</string>
    <string name="home_free_cube">Vapaa kuutio</string>
    <string name="color_white">valkoinen</string>
    <string name="color_yellow">keltainen</string>
    <string name="color_green">vihreä</string>
    <string name="color_blue">sininen</string>
    <string name="color_red">punainen</string>
    <string name="color_orange">oranssi</string>
    <string name="face_front">Etupuoli</string>
    <string name="face_right">Oikea puoli</string>
    <string name="face_back">Takapuoli</string>
    <string name="face_left">Vasen puoli</string>
    <string name="face_top">Yläpuoli</string>
    <string name="face_bottom">Alapuoli</string>
    <string name="manual_title">Syötä värit</string>
    <string name="manual_face_title">%1$s (%2$d/6)</string>
    <string name="manual_hold_hint">Pidä kuutiota näin: %1$s keskiö sinua kohti, %2$s ylhäällä.</string>
    <string name="manual_cell">%1$s, tarra %2$d</string>
    <string name="manual_previous">Edellinen</string>
    <string name="manual_next">Seuraava</string>
    <string name="manual_check">Tarkista</string>
    <string name="manual_clear">Tyhjennä kaikki</string>
    <string name="manual_fill_solved">Täytä ratkaistuna</string>
    <string name="manual_more">Lisää</string>
    <string name="manual_preview">Kuutio 3D-näkymässä</string>
    <string name="manual_count">%1$d/9</string>
    <string name="invalid_counts">Värejä on väärä määrä (%1$s). Jokaista väriä pitää olla 9.</string>
...
    <string name="invalid_duplicate">Sama pala on kuutiossa kahdesti. Tarkista merkityt tarrat.</string>
    <string name="invalid_twist">Yksi kulma on kiertynyt. Tarkista kulmien värit – tai kulma on oikeasti väännetty irti ja takaisin.</string>
    <string name="invalid_flip">Yksi särmä on väärin päin. Tarkista särmien värit.</string>
    <string name="invalid_swap">Kaksi palaa on vaihtanut paikkaa. Tarkista värit.</string>
    <string name="valid_cube">Kuutio kelpaa!</string>
    <string name="free_title">Vapaa kuutio</string>
    <string name="free_counter_clockwise">Vastapäivään</string>
    <string name="free_scramble">Sekoita</string>
    <string name="free_undo">Kumoa</string>
    <string name="free_reset">Alkuun</string>
    <string name="free_hint">Vedä kuutiota kääntääksesi näkymää.</string>
    <string name="free_cube_description">Kolmiulotteinen kuutio</string>
    <string name="color_none">ei väriä</string>
    <string name="side_r">oikeaa puolta</string>
    <string name="side_l">vasenta puolta</string>
    <string name="side_f">etupuolta</string>
    <string name="side_b">takapuolta</string>
    <string name="move_half">Käännä %1$s puoli kierrosta.</string>
...
    <string name="solve_title">Ratkaisu</string>
    <string name="solve_working">Lasketaan ratkaisua…</string>
    <string name="solve_step">Siirto %1$d/%2$d</string>
    <string name="solve_done_move">Tein sen</string>
    <string name="solve_show">Näytä</string>
    <string name="solve_tap_hint">Napauta kuutiota = tein sen · raahaa = käännä</string>
    <string name="handsfree">Handsfree</string>
    <string name="handsfree_speed">Tahti</string>
    <string name="handsfree_slow">Hidas</string>
    <string name="handsfree_normal">Normaali</string>
    <string name="handsfree_fast">Nopea</string>
    <string name="handsfree_stop_hint">Kosketa näyttöä pysäyttääksesi</string>
    <string name="solve_previous">Edellinen</string>
    <string name="solve_finished">Valmis! Kuutio on ratkaistu.</string>
    <string name="solve_already">Kuutio on jo ratkaistu!</string>
    <string name="solve_failed">Ratkaisua ei löytynyt. Tarkista värit.</string>
    <string name="solve_fix">Korjaa värit</string>
    <string name="solve_home">Alkuun</string>
    <string name="free_solve">Ratkaise</string>
    <string name="scan_title">Skannaa kuutio</string>
    <string name="scan_any_hint">Näytä mikä tahansa kuvaamaton puoli, missä asennossa tahansa.</string>
    <string name="scan_one_hint">Keskiö on %1$s. Näytä tämä puoli missä asennossa tahansa.</string>
    <string name="scan_review_face">Tunnistettu: %1$s</string>
    <string name="scan_status_align">Pidä kuution puoli ruudukon sisällä.</string>
    <string name="scan_status_hold">Pidä paikallaan…</string>
...
    <string name="pattern_twister">Pyörre</string>
    <string name="pattern_cross">Plussat</string>
    <string name="pattern_stripes">Raidat</string>
    <string name="home_scan_short">Skannaa</string>
    <string name="home_manual_short">Käsin</string>
    <string name="home_free_short">Vapaa</string>
    <string name="start_go">Aloita</string>
    <string name="start_moves">%1$d siirtoa</string>
    <string name="start_method_fast">Nopein</string>
    <string name="start_method_learn">Opettele</string>
    <string name="solve_pause">Pysäytä</string>
    <string name="solve_menu">Valikko</string>
    <string name="solve_to_start">Aloitusruutuun</string>
...
